--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "angular-animate": "~1.5.7",
     "angular-aria": "~1.5.7",
     "angular-material": "^1.1.3",
-    "angular-messages": "^1.6.2",
+    "angular-messages": "~1.5.7",
     "angular-route": "~1.5.7",
     "browserify": "^14.1.0",
     "stringify": "^5.1.0"
