--- a/package.json
+++ b/package.json
@@ -27,24 +27,14 @@
     ]
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm run build && node server/main",
-    "build": "browserify -t [ stringify --extensions [.tpl ] ] public/app/main.js -o public/dist/bundle.js"
+    "start": "node server/main"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ecstatic": "^2.1.0",
-    "kaop": "^2.6.0",
-    "korm": "^0.2.4",
-    "angular": "~1.5.7",
-    "angular-animate": "~1.5.7",
-    "angular-aria": "~1.5.7",
-    "angular-material": "^1.1.3",
-    "angular-messages": "~1.5.7",
-    "angular-route": "~1.5.7",
-    "browserify": "^14.1.0",
-    "stringify": "^5.1.0"
+    "ecstatic": "~3.1.1",
+    "kaop": "~4.0.0",
+    "korm": "~0.3.0"
   }
 }
