--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "pokedex-dev",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "inuyasha",
+  "version": "0.0.1",
+  "description": "fast REST builder",
+  "main": "server/main.js",
   "cfg": {
     "base": "/rest",
     "static": "/public",
@@ -27,14 +27,15 @@
     ]
   },
   "scripts": {
-    "start": "node server/main"
+    "start": "node ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "acho": "^4.0.1",
     "ecstatic": "~3.1.1",
-    "kaop": "~4.0.0",
+    "kaop": "^4.0.2",
     "korm": "~0.3.0"
   }
 }
