change repo's name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "inuyasha",
+  "name": "ritley",
   "version": "0.0.1",
   "description": "fast REST builder",
   "main": "server/main.js",
